Fix to the alignment of form

--- a/style/login.css
+++ b/style/login.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 #content {
-  padding-bottom: 12%;
-  padding-top: 12%;
+  padding-bottom: 18%;
+  padding-top: 18%;
 }
 
 /* Login Content */
